--- a/templates/result.html
+++ b/templates/result.html
@@ -11,11 +11,30 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 </head>
 <body>
-    <div id="results">
-        {{user_data}}
+    {% if data[0] %}
+        <div id="results">
+            <h1 class = "heading">
+               The best smartphone according to your needs is 
+            </h1>
+            <div class="main_result">
+                <h1 class="subheading"> {{data[0]["modelname"].__str__().capitalize()}}</h1>
+            </div>
+            {% if data[1] %}
+                <div class="other_results">
 
-        {{data}}
+                </div>
+            {% endif %}
+            
 
-    </div>
+        </div>
+    {% else %}
+        <div class="fail">
+            <h1 class="heading">
+                No smartphone found according to your needs. 
+            </h1>
+        </div>
+
+    {% endif %}
+
 </body>
 </html>
