--- a/STYLESHEET.css
+++ b/STYLESHEET.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(-45deg, #cccbcb , #aaaaaa, #6d6c6c);
+  background: linear-gradient(-45deg, #cccbcb , #6b6b6b, #585858);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
