Returned best smartphone and other best smartphones

--- a/templates/result.html
+++ b/templates/result.html
@@ -18,7 +18,7 @@
             </h1>
             <div class="main_result">
                 <h1 class="subheading"> {{data[0]["modelname"].__str__().capitalize()}}</h1>
-                <ul class"specs">
+                <ul class="specs">
                     <li class ="price">{{data[0]["Price"]}} INR </li>
                     <li class ="battery_size">{{data[0]["battery"]}}</li>
                     <li class="display_size">{{data[0]["display_size"]}} inches</li>
