--- a/result.css
+++ b/result.css
@@ -1,6 +1,6 @@
 
 body{
-    background: linear-gradient(-45deg, #cccbcb , #6b6b6b, #585858);
+    background: linear-gradient(-45deg, #a1a1a1 , #575757, #383838);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
@@ -19,7 +19,6 @@ body{
 .main_result{
     display: flex;
     min-width: 70px;
-    margin-left: 80px;
     background: linear-gradient(-90deg, #cccbcb , #6b6b6b, #585858);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -30,8 +29,13 @@ body{
     filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
 }
 
+img.logo{
+    height: 60px;
+    width:  330px;
+    margin-left: 50px;
+}
+
 .light{
-    color: black;
     font-weight: bolder;
 
 }
@@ -61,21 +65,26 @@ ul.specs{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
     font-size: 23px;
+    filter: drop-shadow(2px 2px 2px rgb(104, 104, 104));
 }
 
 .heading{
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
+    filter: drop-shadow(8px 8px 8px rgb(54, 54, 54));
 }
 
 .subheading{
-    font-size: 35px;
-    font-weight: 900;
+    margin-top: 20px;
+    font-size: 40px;
+    font-weight: 1000px;
     margin-left: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
+    filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+
 }
 
 @keyframes gradient {
