--- a/static/Tech News.css
+++ b/static/Tech News.css
@@ -10,24 +10,32 @@ header {
 }
 h1 {
   font-size: 32px;
+  font-family: Berlin Sans FB Bold;
   text-align: center;
 }
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 30px;
 }
-
-
 .article {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  margin-bottom: 30px;
+  box-shadow: 0px 0px 10px 1px white (0, 0, 0, 0.2);
   overflow: hidden;
-  width: calc(50% - 15px);
+  width: calc(40% - 20px);
   text-align: center;
+  margin: 0 auto;
+  margin-bottom: 30px ;
+}
+.article:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  }
+.article:hover {
+  background: linear-gradient(to bottom right, #dddddd, pink);
 }
 .article:last-child {
   margin-bottom: 0;
@@ -55,7 +63,7 @@ p {
   margin-bottom: 20px;
 }
 a {
-  background-color: #ff4444;
+  background-color: blueviolet;
   border-radius: 5px;
   color: #fff;
   display: block;
@@ -63,22 +71,29 @@ a {
   text-align: center;
   text-decoration: none;
 }
+a:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  }
 .browse-more {
-  background-color: purple;
+  background-color: blueviolet;
   border: none;
   border-radius: 5px;
-  color: #fff;
+  color: white;
   cursor: pointer;
   display: block;
+  font-family: 'Sans Berlin FB', sans-serif;
   font-size: 16px;
   margin: 30px auto 0;
   padding: 10px 20px;
 }
 .browse-more:hover {
-  background-color: #ff6666;
+  background-color: grey;
+  transform: translateY(-5px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 .article-description {
-  background-color: #fff9e6;
+  background-color: red;
   border-radius: 20px;
   padding: 10px;
   margin: 10px;
