--- a/STYLESHEET.css
+++ b/STYLESHEET.css
@@ -2,6 +2,7 @@ body{
   background: linear-gradient(-45deg, #cccbcb , #6b6b6b, #585858);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  overflow: hidden;
 }
 
 .container{
