--- a/result.css
+++ b/result.css
@@ -13,7 +13,10 @@ body{
 }
 
 .s23{
-    border-radius: 50px;
+    border-radius: 40px;
+    background: linear-gradient(-180deg, #cccbcb , #6b6b6b, #585858);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
 
 .main_result{
@@ -33,6 +36,13 @@ img.logo{
     height: 60px;
     width:  330px;
     margin-left: 50px;
+}
+
+.shrink{
+    transform: scale(0.7);
+    margin-top: -27px;
+    margin-left: -80px;
+    overflow:auto;
 }
 
 .light{
@@ -84,7 +94,15 @@ ul.specs{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
     filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+    text-overflow:clip;
+}
 
+h1.more{
+    font-size: 25px;
+    font-weight: 900;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(250, 250, 250);
+    filter: drop-shadow(2px 2px 2px rgb(54, 54, 54));
 }
 
 @keyframes gradient {
