--- a/result.css
+++ b/result.css
@@ -3,6 +3,7 @@ body{
     background: linear-gradient(-45deg, #a1a1a1 , #575757, #383838);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    overflow-x: hidden;
 }
 
 
@@ -17,6 +18,9 @@ body{
     background: linear-gradient(-180deg, #cccbcb , #6b6b6b, #585858);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    filter: brightness(120%);
+    filter: contrast(100%);
+    filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
 }
 
 .main_result{
@@ -95,6 +99,21 @@ ul.specs{
     color: rgb(250, 250, 250);
     filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
     text-overflow:clip;
+}
+
+.other_phones{
+    display: flex;
+}
+
+.subheading_2{
+        margin-top: 20px;
+        font-size: 30px;
+        font-weight: 1000px;
+        margin-left: 40px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color: rgb(250, 250, 250);
+        filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+        text-overflow:clip;
 }
 
 h1.more{
