--- a/static/result.css
+++ b/static/result.css
@@ -1,32 +1,137 @@
-body {
-    background-color: rgb(44, 44, 44);
+
+body{
+    background: linear-gradient(-45deg, #a1a1a1 , #575757, #383838);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    overflow-x: hidden;
 }
+
+
 .results {
-    padding: 20px;
     width: 100%;
     height: 100%;
+    margin-left: 50px;
 }
 
+.s23{
+    border-radius: 40px;
+    background: linear-gradient(-180deg, #cccbcb , #6b6b6b, #585858);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    filter: brightness(120%);
+    filter: contrast(100%);
+    filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
+}
 
 .main_result{
-    width: 400px;
-    height: 250px;
-    color: rgb(160, 160, 160);
-    background-color: rgb(160, 160, 160);
-    border-radius: 200px;
+    display: flex;
+    min-width: 70px;
+    background: linear-gradient(-90deg, #cccbcb , #6b6b6b, #585858);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    width: fit-content;
+    border-radius: 40px;
+    filter: brightness(120%);
+    filter: contrast(100%);
+    filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
+}
+
+img.logo{
+    height: 60px;
+    width:  330px;
+    margin-left: 50px;
+}
+
+.shrink{
+    transform: scale(0.7);
+    margin-top: -27px;
+    margin-left: -80px;
+    overflow:auto;
+}
+
+.light{
+    font-weight: bolder;
+
+}
+
+.BT{
+    font-weight: bolder;
+}
+
+.DS{
+    font-weight: bolder;
+}
+
+.Cam{
+    font-weight: bolder;
+}
+
+.R{
+    font-weight: bolder;
+}
+
+.IS{
+    font-weight: bolder;
+}
+
+ul.specs{
+    list-style-type: none;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(250, 250, 250);
+    font-size: 23px;
+    filter: drop-shadow(2px 2px 2px rgb(104, 104, 104));
 }
 
 .heading{
-    font-size: 26px;
+    font-size: 35px;
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
-
+    filter: drop-shadow(8px 8px 8px rgb(54, 54, 54));
 }
 
 .subheading{
-    font-size: 16px;
+    margin-top: 20px;
+    font-size: 40px;
+    font-weight: 1000px;
+    margin-left: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(250, 250, 250);
+    filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+    text-overflow:clip;
+}
+
+.other_phones{
+    display: flex;
+}
+
+.subheading_2{
+        margin-top: 20px;
+        font-size: 30px;
+        font-weight: 1000px;
+        margin-left: 40px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color: rgb(250, 250, 250);
+        filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+        text-overflow:clip;
+}
+
+h1.more{
+    font-size: 25px;
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
+    filter: drop-shadow(2px 2px 2px rgb(54, 54, 54));
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
