--- a/templates/result.html
+++ b/templates/result.html
@@ -5,47 +5,43 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="{{ url_for('static', filename='result.css') }}">
+    <link rel="stylesheet" href="result.css">
     <script type="module" src="{{url_for('static', filename='welcome.js')}}"></script>
     <script type="module" src="{{url_for('static', filename='result.js')}}"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 </head>
 <body>
-    {% if data[0] %}
-        <div id="results">
+        <div class="results">
             <h1 class = "heading">
-               The best smartphone according to your needs is 
+                    "The best smartphone for you is : )"
             </h1>
             <div class="main_result">
-                <h1 class="subheading"> {{data[0]["modelname"].__str__().capitalize()}}</h1>
+                <img class="s23" src="s23.png">
+            <div class="main_specs">
+                <h1 class="subheading">Samsung Galaxy S23⠀⠀⠀⠀⠀</h1>
                 <ul class="specs">
-                    <li class ="price">{{data[0]["Price"]}} INR </li>
-                    <li class ="battery_size">{{data[0]["battery"]}}</li>
-                    <li class="display_size">{{data[0]["display_size"]}} inches</li>
-                    <li class="">{{data[0]["display_size"]}} inches</li>
-                    <li class ="main_camera">{{data[0]["main_camera"]}}</li>
-                    <li class ="RAM">{{data[2]}} GB </li>
-                    <li class ="Storage">{{data[3]}} GB </li> 
+                    <li class ="price"><span class="light">Price</span> - 10000 INR </li>
+                    <li class ="battery_size"><span class="BT">Battery Capacity</span> - 5000 mah </li>
+                    <li class="display_size"><span class="DS"> Display-size</span> - 6.1 inches</li>
+                    <li class ="main_camera"><span class="Cam">Camera</span> - 108 MP</li>
+                    <li class ="RAM"><span class="R"> RAM</span> - 8 GB </li>
+                    <li class ="Storage"><span class="IS">Internal Storage </span> - 256 GB </li> 
                 </ul>
+             </div>
+            </div>
+                
+             <div class="other_results">
 
             </div>
-
-            {% if data[1] %}
-                <div class="other_results">
-
-                </div>
-            {% endif %}
+  
             
-
+<!--
         </div>
-    {% else %}
         <div class="fail">
             <h1 class="heading">
                 No smartphone found according to your needs. 
             </h1>
         </div>
-
-    {% endif %}
-
+    -->
 </body>
 </html>
