--- a/templates/Tech News.html
+++ b/templates/Tech News.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Tech News</title>
+    <title>MOBIHUNT - TECH NEWS</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='Tech News.css') }}">
   </head>
   <body>
