--- a/static/mobihunt.css
+++ b/static/mobihunt.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(-45deg, #cccbcb , #6b6b6b, #585858);
+  background: linear-gradient(-45deg, #3b3b3b , #222222, #181818);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   overflow: hidden;
@@ -17,7 +17,11 @@ img.logo{
   margin-left: 50px;
 }
 
+img {
+  opacity: 0.95;
+}
 img.started{
+  
   height: 520px;
   width:  520px;
   margin-top: 20px;
@@ -27,8 +31,10 @@ img.started{
   filter: drop-shadow(7px 7px 7px rgb(59, 59, 59));
 }
 
-img:hover.started{
+img:hover{
   transform: scale(1.02);
+  transition: 0.2;
+  opacity: 0.9;
 }
 
 img.news{
