--- a/static/Tech News.css
+++ b/static/Tech News.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background: linear-gradient(45deg, #cccbcb , #6b6b6b, #585858);
+  background: linear-gradient(-45deg, #3b3b3b , #222222, #181818);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
