--- a/static/result.css
+++ b/static/result.css
@@ -1,6 +1,6 @@
 
 body{
-    background: linear-gradient(-45deg, #a1a1a1 , #575757, #383838);
+    background: linear-gradient(-45deg, #3b3b3b , #222222, #181818);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     overflow-x: hidden;
@@ -20,7 +20,7 @@ body{
     animation: gradient 15s ease infinite;
     filter: brightness(120%);
     filter: contrast(100%);
-    filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
+    /* filter: drop-shadow(10px 10px 10px rgb(59, 59, 59)); */
 }
 
 .main_result{
@@ -33,17 +33,18 @@ body{
     border-radius: 40px;
     filter: brightness(120%);
     filter: contrast(100%);
-    filter: drop-shadow(10px 10px 10px rgb(59, 59, 59));
+    /* filter: drop-shadow(10px 10px 10px rgb(59, 59, 59)); */
 }
 
 img.logo{
+    margin-top: 10px;
     height: 60px;
     width:  330px;
     margin-left: 50px;
 }
 
 .shrink{
-    transform: scale(0.7);
+    transform: scale(0.75);
     margin-top: -27px;
     margin-left: -80px;
     overflow:auto;
@@ -79,25 +80,27 @@ ul.specs{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
     font-size: 23px;
-    filter: drop-shadow(2px 2px 2px rgb(104, 104, 104));
+    /* filter: drop-shadow(2px 2px 2px rgb(104, 104, 104)); */
 }
 
 .heading{
+    user-select: none;
     font-size: 35px;
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
-    filter: drop-shadow(8px 8px 8px rgb(54, 54, 54));
+    /* filter: drop-shadow(8px 8px 8px rgb(54, 54, 54)); */
 }
 
 .subheading{
+    user-select: none;
     margin-top: 20px;
     font-size: 40px;
     font-weight: 1000px;
     margin-left: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
-    filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+    /* filter: drop-shadow(3px 3px 3px rgb(54, 54, 54)); */
     text-overflow:clip;
 }
 
@@ -106,22 +109,24 @@ ul.specs{
 }
 
 .subheading_2{
+        user-select: none;
         margin-top: 20px;
         font-size: 30px;
         font-weight: 1000px;
         margin-left: 40px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         color: rgb(250, 250, 250);
-        filter: drop-shadow(3px 3px 3px rgb(54, 54, 54));
+        /* filter: drop-shadow(3px 3px 3px rgb(54, 54, 54)); */
         text-overflow:clip;
 }
 
 h1.more{
+    user-select: none;
     font-size: 25px;
     font-weight: 900;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: rgb(250, 250, 250);
-    filter: drop-shadow(2px 2px 2px rgb(54, 54, 54));
+    /* filter: drop-shadow(2px 2px 2px rgb(54, 54, 54)); */
 }
 
 @keyframes gradient {
