--- a/static/welcome.css
+++ b/static/welcome.css
@@ -1,5 +1,10 @@
 body {
-    background-color: rgb(44, 44, 44);
+    /* background: linear-gradient(-45deg, #a1a1a1 , #575757, #383838); */
+    background: linear-gradient(-45deg, #3b3b3b , #222222, #181818);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    overflow-x: hidden;
+
 }
 
 .questionsContainer {
@@ -121,3 +126,14 @@ body {
     color: hsl(0, 0%, 100%);
 }
 
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
