--- a/templates/result.html
+++ b/templates/result.html
@@ -3,45 +3,79 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>MOBIHUNT - RESULT</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="result.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='result.css')}}">
     <script type="module" src="{{url_for('static', filename='welcome.js')}}"></script>
     <script type="module" src="{{url_for('static', filename='result.js')}}"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 </head>
 <body>
+    <img class="logo" src="{{url_for('static', filename='images/Logo.png')}}">
         <div class="results">
-            <h1 class = "heading">
-                    "The best smartphone for you is : )"
-            </h1>
-            <div class="main_result">
-                <img class="s23" src="s23.png">
-            <div class="main_specs">
-                <h1 class="subheading">Samsung Galaxy S23⠀⠀⠀⠀⠀</h1>
-                <ul class="specs">
-                    <li class ="price"><span class="light">Price</span> - 10000 INR </li>
-                    <li class ="battery_size"><span class="BT">Battery Capacity</span> - 5000 mah </li>
-                    <li class="display_size"><span class="DS"> Display-size</span> - 6.1 inches</li>
-                    <li class ="main_camera"><span class="Cam">Camera</span> - 108 MP</li>
-                    <li class ="RAM"><span class="R"> RAM</span> - 8 GB </li>
-                    <li class ="Storage"><span class="IS">Internal Storage </span> - 256 GB </li> 
-                </ul>
-             </div>
-            </div>
-                
-             <div class="other_results">
+            {% if data[0] != None %}
+                <h1 class = "heading">
+                Here's the best phone for you :)
+                </h1>
+                <div class="main_result">
+                    <img class="s23" src="{{data[0]['image_url']}}">
+                <div class="main_specs">
+                    <h1 class="subheading">{{data[0]["modelname"].__str__().title()}}⠀⠀⠀⠀⠀</h1>
+                    <ul class="specs">
+                        <li class ="price"><span class="light">Price</span>: {{round(data[0]["price"])}} INR ⠀⠀⠀⠀⠀</li>
+                        <li class ="battery_size"><span class="BT">Battery Capacity</span>: {{data[0]["battery"]}} mah ⠀⠀⠀⠀⠀</li>
+                        <li class="display_size"><span class="DS"> Display Size</span>: {{data[0]["display_size"]}} inches⠀⠀⠀⠀⠀</li>
+                        <li class ="main_camera"><span class="Cam">Camera</span>: {{data[0]["main_camera"]}} MP⠀⠀⠀⠀⠀</li>
+                        <li class ="RAM"><span class="R"> RAM</span>: {{data[2]}}⠀⠀⠀⠀⠀ </li>
+                        <li class ="Storage"><span class="IS">Internal Storage</span>: {{data[3]}}⠀⠀⠀⠀⠀ </li> 
+                    </ul>
+                </div>
+                </div>
 
-            </div>
-  
-            
-<!--
-        </div>
-        <div class="fail">
-            <h1 class="heading">
-                No smartphone found according to your needs. 
-            </h1>
-        </div>
-    -->
+            {% else %}
+                <h1 class="heading">
+                    MobiHunt could not hunt your phone down :(
+                </h1>
+            {% endif %}
+            <br>
+            {% if data[1] != None%}
+                <div>
+                <h1 class="more">
+                    Wait there's more ;)
+                </h1> 
+                </div>
+                <div class="other_phones">
+                <div class="main_result shrink">
+                    <img class="s23" src="{{data[1][0]['image_url']}}">
+                <div class="main_specs">
+                    <h1 class="subheading_2">{{data[1][0]["modelname"].__str__().title()}}⠀⠀⠀</h1>
+                </div>
+                </div>
+
+                <div class="main_result shrink">
+                    <img class="s23" src="{{data[1][1]['image_url']}}">
+                <div class="main_specs">
+                    <h1 class="subheading_2">{{data[1][1]["modelname"].__str__().title()}}⠀⠀⠀</h1>
+                    <!-- <p class="price_text">{{data[1][1]["price"]}} INR</p> -->
+                </div>
+                </div>
+
+                <div class="main_result shrink">
+                    <img class="s23" src="{{data[1][2]['image_url']}}">
+                <div class="main_specs">
+                    <h1 class="subheading_2">{{data[1][2]["modelname"].__str__().title()}}⠀⠀⠀</h1>
+                </div>
+                </div>
+
+                <div class="main_result shrink">
+                    <img class="s23" src="{{data[1][3]['image_url']}}">
+                <div class="main_specs">
+                    <h1 class="subheading_2">{{data[1][3]["modelname"].__str__().title()}}⠀⠀⠀</h1>
+                </div>
+                </div>
+                </div>
+            {%endif%}
+
+              
 </body>
 </html>
