--- a/templates/mobihunt.html
+++ b/templates/mobihunt.html
@@ -6,8 +6,7 @@
     <title>MOBIHUNT</title>
   </head>
   <body>
-      
-  <img class= "logo" src="{{ url_for('static', filename='images/logo.png') }}">
+  <img class= "logo" src="{{ url_for('static', filename='images/Logo.png') }}">
     <br>
   <div class= "container">
   <a href="http://localhost:6969/get_started">
@@ -23,7 +22,7 @@
   </tr>
   <tr>
     <td class="sec">
-      <a href="">
+      <a href="http://localhost:6969/contact_us">
         <img class="Contact" src="{{ url_for('static', filename='images/contact us.png') }}">
       </a>
       <a href="">
