--- a/static/result.css
+++ b/static/result.css
@@ -14,8 +14,8 @@ body{
 }
 
 .s23{
-    border-radius: 40px;
-    background: linear-gradient(-180deg, #cccbcb , #6b6b6b, #585858);
+    border-radius: 20px;
+    background: linear-gradient(270deg, rgb(64, 72, 134), #7077d1);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     filter: brightness(120%);
@@ -26,11 +26,11 @@ body{
 .main_result{
     display: flex;
     min-width: 70px;
-    background: linear-gradient(-90deg, #cccbcb , #6b6b6b, #585858);
+    background: linear-gradient(270deg, rgb(64, 72, 134), #7077d1);;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     width: fit-content;
-    border-radius: 40px;
+    border-radius: 20px;
     filter: brightness(120%);
     filter: contrast(100%);
     /* filter: drop-shadow(10px 10px 10px rgb(59, 59, 59)); */
@@ -44,6 +44,8 @@ img.logo{
 }
 
 .shrink{
+    margin-left: 30px;
+    background: linear-gradient(270deg,  #7077d1,rgb(64, 72, 134));
     transform: scale(0.75);
     margin-top: -27px;
     margin-left: -80px;
