--- a/templates/Tech News.html
+++ b/templates/Tech News.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Tech News</title>
-    <link rel="stylesheet" href="Tech News.css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='Tech News.css') }}"/>
   </head>
   <body>
     <header>
@@ -16,6 +16,6 @@
       <div class="articles"></div>
       <button class="browse-more">BROWSE MORE</button>
     </main>
-    <script src="Tech News.js"></script>
+    <script src="{{ url_for('static', filename='Tech News.js') }}"></script>
   </body>
 </html>
