--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="main">
+      
       <div class="questionsContainer">
         {% for k,v in questions.items() %}
           <div id = {{k.replace(' ', '_')}} class="questionDivs">
@@ -28,8 +29,12 @@
         {% endfor %}
         <div>
           <button class="nextQuestion" id = "nextQuestion">Next Question</button>
+          <div class="spinner-container">
+            <div class="spinner" id = "spinner"></div>
+          </div>
         </div>
       </div>
+
       
     </div>
   </body>
